feb-2024-k8s-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-http-gateway
  namespace: default
spec:
  gatewayClassName: external-gateway-class
  listeners:
  - name: httpListener
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
