feb-2024-k8s-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-http-route
  namespace: default
spec:
  parentRefs:
  - name: external-http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
      headers:
      - name: apiTrafficType
        value: "internalGateway"
    backendRefs:
    - name: api-backend-service
      port: 8080
